--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
-<title>Hello AngularJS</title>
+<base href="/">
+<title>Thyme Invest</title>
 <link href="css/angular-bootstrap.css" rel="stylesheet">
+
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
 	display: none !important;
@@ -10,16 +12,9 @@
 </style>
 </head>
 
-<body ng-app="hello" ng-cloak class="ng-cloak">
-	<div ng-controller="navigation as nav" class="container">
-		<ul class="nav nav-pills" role="tablist">
-			<li class="active"><a href="#/">home</a></li>
-			<li><a href="#/login">login</a></li>
-			<li ng-show="authenticated"><a href="" ng-click="nav.logout()">logout</a></li>
-		</ul>
-	</div>
-	<div ng-view class="container"></div>
+<body ng-app="app" ng-cloak class="ng-cloak">
+	<div ng-view class="container" style="width: 100%;""></div>
 	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
-	<script src="js/hello.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
